# hybrid_geometric_neural_traversability

./: CMakeLists.txt  README.md  readme.md
cpp/include/: utils.hpp
cpp/src/: hybrid_traversable_ground.cpp
python/: readme.md  save_inferences.py
