cmake_minimum_required(VERSION 3.16.3)
project(codeUtilities VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
# find_package(PCL 1.3 REQUIRED COMPONENTS common io filters visualization)
# find_package(catkin REQUIRED rosbag sensor_msgs std_msgs roscpp)
find_package(PCL 1.3 REQUIRED)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
find_package(gazebo REQUIRED)
message(STATUS "PCL version: " ${PCL_VERSION})
include_directories(cpp/include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
link_directories(${catkin_LIBRARY_DIRS} ${PCL_LIBRARY_DIRS} ${Eigen3_LIBRARY_DIRS} ${GAZEBO_LIBRARY_DIRS})
add_definitions(${catkin_DEFINITIONS} ${PCL_DEFINITIONS} ${Eigen3_DEFINITIONS} ${GAZEBO_DEFINITIONS})

add_executable(paper cpp/src/hybrid_traversable_ground.cpp)
target_link_libraries(paper ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${Eigen3_LIBRARIES})
